2010-01-20  Michael Hutchinson  <mhutchinson@novell.com>

	* AssemblyInfo.cs:
	* ArrayAdaptor.cs:
	* LoggingService.cs:
	* SoftDebuggerSession.cs:
	* SoftDebuggerAdaptor.cs:
	* Mono.Debugger.Soft.dll:
	* FieldValueReference.cs:
	* SoftDebuggerBacktrace.cs:
	* SoftDebuggerStartInfo.cs:
	* SoftEvaluationContext.cs:
	* VariableValueReference.cs:
	* PropertyValueReference.cs:
	* Mono.Debugger.Soft.dll.mdb:
	* Mono.Debugging.Soft.csproj: Split out a new dll
	  Mono.Debugging.Soft from the soft debugger addin. It has the
	  bits that have with no MD deps apart from Mono.Debugging,
	  and it's strongnamed so MonoVS can use it.
